[gd_scene load_steps=4 format=3 uid="uid://x3e2x8oxiu8b"]

[ext_resource type="Texture2D" uid="uid://bn4fyfuvknkcm" path="res://Assets/Icons/Arrow.png" id="1_6ay4x"]
[ext_resource type="Script" uid="uid://du5m4b1mbji6b" path="res://ui/gameplay_ui/pointer_ui.gd" id="1_k3js1"]
[ext_resource type="Texture2D" uid="uid://c3keennftqh31" path="res://Assets/Icons/CollectionIcon.png" id="2_74q7g"]

[node name="PointerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k3js1")

[node name="PointerPivot" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PoIIcon" type="TextureRect" parent="PointerPivot"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48
anchor_top = 0.112
anchor_right = 0.52
anchor_bottom = 0.182
offset_left = 1.19995
offset_top = 0.720001
offset_right = -1.20007
offset_bottom = -0.0800171
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_74q7g")
expand_mode = 1
stretch_mode = 4

[node name="ArrowIcon" type="TextureRect" parent="PointerPivot"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48
anchor_top = 0.083
anchor_right = 0.52
anchor_bottom = 0.153
offset_left = 1.19995
offset_top = 0.479996
offset_right = -1.20007
offset_bottom = -0.320023
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6ay4x")
expand_mode = 1
stretch_mode = 4
